<resources>
    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="app_name">Budget Manager</string>
    <string name="hint_name">Name...</string>
    <string name="hint_date">Date: %1$s</string>
    <string name="hint_start_date">Start Date: %1$s</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_income">Income</string>
    <string name="button_save">Save</string>
    <string name="money_format">R %1$.2f</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>

    <string name="menu_Transactions">Transactions</string>
    <string name="menu_Recurring">Debit Orders</string>
    <string name="menu_Summary">Summary</string>
    <string name="menu_ExportPDF">Export as PDF</string>
    <string name="menu_ExportJson">Export JSON</string>
    <string name="menu_ImportJson">Import JSON</string>
    <string name="summary_current">Current</string>
    <string name="summary_recurring_income">Recurring Income</string>
    <string name="summary_recurring_expenses">Debit Orders</string>
    <string name="summary_income">Income</string>
    <string name="summary_balance">Balance</string>
    <string name="summary_upcoming">Upcoming</string>
    <string name="summary_incoming">Incoming</string>
    <string name="summary_outgoing">Outgoing</string>
    <string name="summary_expenses">Expenses</string>

    <string name="record_balance">Record Balance</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="snackbar_delete">Item deleted</string>
    <string name="snackbar_nodelete">No item has been deleted</string>
    <string name="snackbar_CannotCreateFile">Could not create file</string>
    <string name="snackbar_CannotReadFile">Could not read file</string>
    <string name="snackbar_InvalidInputFile">Invalid file format</string>
    <string name="snackbar_done">Done!</string>
    <string name="action_undo">Undo</string>
</resources>
